force-app/main/default/objects/Resource__c/Resource__c.object-meta.xml
<CustomObject>
    <description>Grounding source for the agent's navigation answers: support groups, local services, benefits/schemes, and crisis lines.</description>
    <label>Resource</label>
    <nameField>
        <label>Resource Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>