force-app/main/default/objects/Resource__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <length>120</length>
    <type>Text</type>
    <description>Locality filter for navigation answers; blank = national/global.</description>
</CustomField>