force-app/main/default/objects/Resource__c/fields/Is_Crisis_Resource__c.field-meta.xml
<CustomField>
    <fullName>Is_Crisis_Resource__c</fullName>
    <label>Is Crisis Resource</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Flags helplines for the crisis path.</description>
</CustomField>