force-app/main/default/objects/Resource__c/fields/Resource_Type__c.field-meta.xml
<CustomField>
    <fullName>Resource_Type__c</fullName>
    <label>Resource Type</label>
    <required>true</required>
    <type>Picklist</type>
    <description>Routing by need.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Support Group</fullName><default>false</default><label>Support Group</label></value>
            <value><fullName>Local Service</fullName><default>false</default><label>Local Service</label></value>
            <value><fullName>Benefit/Scheme</fullName><default>false</default><label>Benefit/Scheme</label></value>
            <value><fullName>Crisis Line</fullName><default>false</default><label>Crisis Line</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>