force-app/main/default/objects/Resource__c/fields/Source_URL__c.field-meta.xml
<CustomField>
    <fullName>Source_URL__c</fullName>
    <label>Source URL</label>
    <type>Url</type>
    <description>Citation link.</description>
</CustomField>