force-app/main/default/objects/Resource__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <label>Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <description>Plain-language description; grounded answer body.</description>
</CustomField>